# modern-cpp

./: CMakeLists.txt  README.md
inc/: README.md
inc/algorithms/: reduce.hpp
inc/data_structures/: dynamic_array.hpp  linked_list.hpp
inc/first_assignment/: heap_matrix.hpp
inc/math/: matrix.hpp  static_matrix.hpp
inc/misc/: string.hpp
inc/tests/: dynamic_array_and_reduction_tests.hpp  fundamental_types_tests.hpp  int32_type_traits_test.hpp  linked_list_test.hpp  string_tests.hpp
inc/type_traits/: type_traits.hpp
include/2023.03.07/: dynamic_array.hpp  dynamic_array_and_reduction_tests.hpp  dynamic_array_test.hpp  reduce.hpp
include/2023.03.09/: linked_list.hpp  linked_list_test.hpp
src/: README.md  main.cpp
src/2023.03.07/: dynamic_array_and_reduction_tests.cpp  dynamic_array_test.cpp
src/2023.03.09/: linked_list_test.cpp
src/tests/: dynamic_array_and_reduction_tests.cpp  fundamental_types_tests.cpp  int32_type_traits_test.cpp  linked_list_test.cpp  string_tests.cpp
